# console

./: AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.claude/: workflow-state.json
.claude/decisions/: 2026-07-12-invariant-7-decision-stream.md
.claude/reports/: 2026-07-12-console-v2-phase2-s2-residency.md  2026-07-13-console-v2-phase2-s3-receive.md  2026-07-13-console-v2-phase2-s5-dashboard.md  2026-07-13-smoke-dashboard.py  2026-07-14-console-v2-phase2-s7-activity.md  2026-07-14-smoke-activity.py
.claude/specs/: 2026-07-12-console-v2-phase1-visual.md  2026-07-12-console-v2-phase2-s2-residency.md  2026-07-13-console-v2-phase2-s3-receive.md  2026-07-13-console-v2-phase2-s5-dashboard.md  2026-07-14-console-v2-phase2-s7-activity.md  2026-07-15-release-train-v0.2.0.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: APPROVER-PROTOCOL.md
src/: app.rs  format.rs  lib.rs  main.rs  protocol.rs  qr.rs  theme.rs  transport.rs  ui.rs
tests/: tty_gate.rs
